<resources>
    <string name="app_name">Minor IT Sphere App</string>
    <string name="ise">Information Science Engineering</string>
    <string name="isinfo">
        The department of Information Science and Engineering, established in the year 2000
        with an initial intake of 30, offers an undergraduate course in engineering
        (B.E. in Information Science and Engineering). Now, the intake is enhanced to 60 students.
        The department is recognized as a research centre by Visvesvaraiya Technological University, Belgaum.
        The department is accredited twice by the National Board of Accreditation.
    </string>
    <string name="faculty">Faculty Members</string>
    <string name="faculty_icon_desc">Faculty Icon</string>
    <string name="faculty_name_1">Dr. Jagadeesh Pujari</string>
    <string name="faculty_qualifications_1">Qualifications: M.E., M.Tech., Ph.D.</string>
    <string name="faculty_experience_1">Experience: 16 years - Teaching, 5.3 years - Industry</string>
    <string name="faculty_email_1">Email: jagadishpujari@gmail.com</string>
    <string name="faculty_name_2">Prof. Varsha Jadhav</string>
    <string name="faculty_qualifications_2">Qualifications: B.E., M.Tech.</string>
    <string name="faculty_experience_2">Experience: 16 Years</string>
    <string name="faculty_email_2">Email: varshajadhav.sdmcet@gmail.com</string>
    <string name="faculty_name_3">Dr. Deepa Bendigeri</string>
    <string name="faculty_qualifications_3">Qualifications: B.E., M.Tech., Ph.D.</string>
    <string name="faculty_experience_3">Experience: 16 years</string>
    <string name="faculty_email_3">Email: deepabendigeri12@gmail.com</string>
    <string name="faculty_name_4">Prof. Pushpalatha S. Nikkam</string>
    <string name="faculty_qualifications_4">Qualifications: B.E., M.Tech, Ph.D.(CSE)</string>
    <string name="faculty_experience_4">Experience: 16 years</string>
    <string name="faculty_email_4">Email: pusphalata.sdmcet@example.com</string>
    <string name="faculty_name_5">Dr. Anita Dixit</string>
    <string name="faculty_qualifications_5">Qualifications: B.E., M.Tech, Ph.D.</string>
    <string name="faculty_experience_5">Experience: 22 years</string>
    <string name="faculty_email_5">Email: anitadixit.sdmcet@gmail.com</string>
    <string name="faculty_name_6">Prof. Arathi Nayak</string>
    <string name="faculty_qualifications_6">Qualifications: B.E., M.Tech (CSE)</string>
    <string name="faculty_experience_6">Experience: 10 years</string>
    <string name="faculty_email_6">Email: arathi.sdmcet@gmail.com</string>
    <string name="faculty_name_7">Prof. Pratibha Badiger</string>
    <string name="faculty_qualifications_7">Qualifications: B.E.(ISE), M.Tech(CSE)</string>
    <string name="faculty_experience_7">Experience: 0.5 years - Teaching, 2 years - Industrial</string>
    <string name="faculty_email_7">Email: pratibha.sdmcet@gmail.com</string>
    <string name="faculty_name_8">Dr. Rajshekharappa</string>
    <string name="faculty_qualifications_8">Qualifications: B.E.(ISE), M.Tech(CSE), Ph.D.(CSE)</string>
    <string name="faculty_experience_8">Experience: 7 years</string>
    <string name="faculty_email_8">Email: rajashekharappa.sdmcet@gmail.com</string>
        <string name="cse">Computer Science Engineering</string>
        <string name="csinfo">
        Department of Computer Science and Engineering, established in the year of 1985,
        is running one undergraduate program B.E. (Computer Science and Engineering),
        one postgraduate program M.Tech (Computer Science and Engineering). The
        department is recognized as a research center by Visvesvaraya Technological University, Belgaum.
        The department is accredited thrice by the National Board of Accreditation.
    </string>
        <string name="cse_faculty_name_1">Dr. Shrihari M. Joshi</string>
        <string name="cse_faculty_qualifications_1">Qualifications: B.E (CSE), M.E(CSE), Ph.D</string>
        <string name="cse_faculty_experience_1">Experience: 30 years</string>
        <string name="cse_faculty_email_1">Email: joshshree@gmail.com</string>
        <string name="cse_faculty_name_2">Dr. U. P. Kulkarni</string>
        <string name="cse_faculty_qualifications_2">Qualifications: B.E (CSE), M.E (CSE), Ph.D</string>
        <string name="cse_faculty_experience_2">Experience: 33 years</string>
        <string name="cse_faculty_email_2">Email: upkulkarni@sdmcet.ac.in</string>
        <string name="cse_faculty_name_3">Dr. Jayadevi C Karur</string>
        <string name="cse_faculty_qualifications_3">Qualifications: B.E (E AND C), M.Tech (CSE), Ph.D</string>
        <string name="cse_faculty_experience_3">Experience: 25 years</string>
        <string name="cse_faculty_email_3">Email: jck1965@gmail.com</string>
        <string name="cse_faculty_name_4">Prof. Jayteerth V Vadavi</string>
        <string name="cse_faculty_qualifications_4">Qualifications: B.E, M.E</string>
        <string name="cse_faculty_experience_4">Experience: 22 years</string>
        <string name="cse_faculty_email_4">Email: jvvadavi@sdmcet.ac.in</string>
        <string name="cse_faculty_name_5">Prof. Raghavendra G. S.</string>
        <string name="cse_faculty_qualifications_5">Qualifications: B.E, M.Tech, Ph.D</string>
        <string name="cse_faculty_experience_5">Experience: 20 years</string>
        <string name="cse_faculty_email_5">Email: gsr.sdmcet@gmail.com</string>
        <string name="cse_faculty_name_6">Prof. S. B. Kulkarni</string>
        <string name="cse_faculty_qualifications_6">Qualifications: B.E, M.Tech, Ph.D</string>
        <string name="cse_faculty_experience_6">Experience: 21 years</string>
        <string name="cse_faculty_email_6">Email: sbkulkarni_in@yahoo.com</string>
        <string name="cse_faculty_name_7">Prof. Ravindra Dastikop</string>
        <string name="cse_faculty_qualifications_7">Qualifications: M.S</string>
        <string name="cse_faculty_experience_7">Experience: 22 years</string>
        <string name="cse_faculty_email_7">Email: ravindra.dastikop@gmail.com</string>
        <string name="cse_faculty_name_8">Prof. Nita G Kulkarni</string>
        <string name="cse_faculty_qualifications_8">Qualifications: B.E, M.Tech</string>
        <string name="cse_faculty_experience_8">Experience: 18 years</string>
        <string name="cse_faculty_email_8">Email: nita.kakhadaki@sdmcet.ac.in</string>
        <string name="cse_faculty_name_9">Prof. Vidyagouri Kulkarni</string>
        <string name="cse_faculty_qualifications_9">Qualifications: B.E, M.Tech, Ph.D</string>
        <string name="cse_faculty_experience_9">Experience: 17 years</string>
        <string name="cse_faculty_email_9">Email: vidya.gouri@gmail.com</string>
        <string name="cse_faculty_name_10">Prof. Ranganath G Yadawad</string>
        <string name="cse_cse_faculty_qualifications_10">Qualifications: B.E, M.Tech</string>
        <string name="cse_faculty_experience_10">Experience: 20 years</string>
        <string name="cse_faculty_email_10">Email: rgyadawad@gmail.com</string>
        <string name="cse_faculty_name_11">Prof. Anand Vaidya</string>
        <string name="cse_faculty_qualifications_11">Qualifications: B.E, M.Tech</string>
        <string name="cse_faculty_experience_11">Experience: 21 years</string>
        <string name="cse_faculty_email_11">Email: vaidyacse@gmail.com</string>
        <string name="cse_faculty_name_12">Prof. Archana Nandibewoo</string>
        <string name="cse_faculty_qualifications_12">Qualifications: B.E, M.Tech, Ph.D</string>
        <string name="cse_faculty_experience_12">Experience: 15 years</string>
        <string name="cse_faculty_email_12">Email: narchana2006@gmail.com</string>
        <string name="cse_faculty_name_13">Prof. Shreedhar G Yadawad</string>
        <string name="cse_faculty_qualifications_13">Qualifications: B.E, M.Tech</string>
        <string name="cse_faculty_experience_13">Experience: 17 years</string>
        <string name="cse_faculty_email_13">Email: shreeyadawad@gmail.com</string>
        <string name="cse_faculty_name_14">Prof. Indira Umarji</string>
        <string name="cse_faculty_qualifications_14">Qualifications: B.E, M.Tech</string>
        <string name="cse_faculty_experience_14">Experience: 14 years</string>
        <string name="cse_cse_faculty_email_14">Email: indira.umarji@gmail.com</string>
        <string name="cse_faculty_name_15">Prof. Govind Negalur</string>
        <string name="cse_faculty_qualifications_15">Qualifications: B.E, M.Tech</string>
        <string name="cse_faculty_experience_15">Experience: 15 years</string>
        <string name="cse_faculty_email_15">Email: govind.negalur@sdmcet.ac.in</string>
        <string name="cse_faculty_name_16">Prof. Smitesh Patravali</string>
        <string name="cse_faculty_qualifications_16">Qualifications: B.E, M.Tech (Ph.D)</string>
        <string name="cse_faculty_experience_16">Experience: 16 years</string>
        <string name="cse_faculty_email_16">Email: smitesh.patravali@gmail.com</string>
        <string name="cse_faculty_name_17">Prof. Sandhya S V</string>
        <string name="cse_faculty_qualifications_17">Qualifications: B.E, M.Tech, Ph.D (pursuing)</string>
        <string name="cse_faculty_experience_17">Experience: 20 years</string>
        <string name="cse_faculty_email_17">Email: sandhyasdmcet@gmail.com</string>
        <string name="cse_faculty_name_18">Prof. Prathap Kumar M K</string>
        <string name="cse_faculty_qualifications_18">Qualifications: B.E, M.Tech (Ph.D)</string>
        <string name="cse_faculty_experience_18">Experience: 18 years</string>
        <string name="cse_faculty_email_18">Email: pratapkumar.mk@sdmcet.ac.in</string>
        <string name="cse_faculty_name_19">Prof. Basavaraj Vaddatti</string>
        <string name="cse_faculty_qualifications_19">Qualifications: B.E, M.Tech</string>
        <string name="cse_faculty_experience_19">Experience: 17 years</string>
        <string name="cse_faculty_email_19">Email: basavaraj.vaddatti@gmail.com</string>
        <string name="cse_faculty_name_20">Prof. Rani Shetty</string>
        <string name="cse_faculty_qualifications_20">Qualifications: B.E, M.Tech (Ph.D)</string>
        <string name="cse_faculty_experience_20">Experience: 12 years</string>
        <string name="cse_faculty_email_20">Email: ranishetty1990@sdmcet.ac.in</string>
    <string name="aiml">Artificial Intelligence And Machine Learning</string>
    <string name="aimlinfo">
        Department of Artificial Intelligence And Machine Learning,
        established in the year of 2022, is running one undergraduate
        program B.E. (Artificial Intelligence And Machine Learning).
    </string>
    <string name="aiml_faculty_name_1">Dr. Sangappa Ramachandra Biradar</string>
    <string name="aiml_faculty_qualifications_1">Qualifications: M.E., M.Tech., Ph.D.</string>
    <string name="aiml_faculty_experience_1">Experience: 6 years </string>
    <string name="aiml_faculty_email_1">Email: srbiradar.sdmcet@gmail.com</string>
    <string name="aiml_faculty_name_2">Dr. Leena L Sakri</string>
    <string name="aiml_faculty_qualifications_2">Qualifications: B.E., M.Tech, Ph.D</string>
    <string name="aiml_faculty_experience_2">Experience: 8 Years</string>
    <string name="aiml_faculty_email_2">Email: leenasakri.sdmcet@gmail.com</string>
    <string name="aiml_faculty_name_3">Dr. Ramachandranayak &amp; Yadawad</string>
    <string name="aiml_faculty_qualifications_3">Qualifications: B.E., M.Tech., Ph.D</string>
    <string name="aiml_faculty_experience_3">Experience: 11 years</string>
    <string name="aiml_faculty_email_3">Email: rnyadawad.sdmcet@gmail.com</string>
    <string name="aiml_faculty_name_4">Dr. Vandana S. Bhat</string>
    <string name="aiml_faculty_qualifications_4">Qualifications: B.E., M.Tech, Ph.D</string>
    <string name="aiml_faculty_experience_4">Experience: 9 years</string>
</resources>